16-Oct-2019 V0.19 Checkpoint in improving update reference sequences and troubleshooting tree node lists for ATC
17-Oct-2019 V0.20 Checkpoint in refactoring reference sequence update processing.
18-Oct-2019 V0.21 Test version of document-level update of reference sequence assignments
18-Oct-2019 V0.22 Update cache file management
18-Oct-2019 V0.23 Adjust filter behavior, turn off test mode, fix Py27 test parameter.
19-Oct-2019 V0.24 Handle miscellaneous issues in reference sequence processing from Oct 18 full load
20-Oct-2019 V0.25 Handle duplicates from inconsistent struct_ref_* records
 5-Dec-2019 V0.26 Add support for entity typed schema and update dependencies.
 6-Dec-2019 V0.27 Add match index cache recovery.1
11-Dec-2019 V0.28 Adding reference sequence loader and moving pipeline to py38.
15-Dec-2019 V0.29 Added methods to load UniProt features
17-Dec-2019 V0.30 Pre-filter GOIDs and add ExDbWorkflow module with simple wf entry points
20-Dec-2019 V0.31 Adjust package definition
23-Dec-2019 V0.32 Change protocol for supplementing accessions and EC annotations.
04-Jan-2020 V0.33 Add support for rcsb_polymer_entity.rcsb_enzyme_class_combined_depth
09-Jan-2020 V0.34 Add additional cache test criteria for UniProt match cache.
10-Jan-2020 V0.35 Update dependencies for rcsb.utils.go and rcsb.utils.struct
23-Jan-2020 V0.36 Changes to support pre-beta-v1 schema reorganization with the addition of rcsb_polymer_entity_annotation
27-Jan-2020 V0.37 Add annotation extractor modules and adjustments for some missing features.
29-Jan-2020 V0.38 Update dependencies for GO and Drugbank fixes
30-Jan-2020 V0.39 Update dependencies structure domain utilities
 2-Feb-2020 V0.40 Add test fixtures to measure memory usage, streamline some extractions, suppress some diagnostic reporting
 4-Feb-2020 V0.41 Update dependencies to support split configuration
 6-Feb-2020 V0.42 Address issue with duplicated annotations from multiple reference sequences