@@ -73,13 +73,13 @@ class ExDbWorkflowTests(unittest.TestCase):
             self.__commonD["rebuildCache"] = False
             rlWf = ExDbWorkflow(**self.__commonD)
             #
-            ok = rlWf.load("upd_ref_seq", testMode=True, minMatchPrimary=140, **self.__loadCommonD)
+            ok = rlWf.load("upd_ref_seq", testMode=True, minMatchPrimary=140, refChunkSize=50, **self.__loadCommonD)
             logger.info("Test mode status is %r", ok)
             self.assertTrue(ok)
             if ok:
                 self.__commonD["rebuildCache"] = False
                 rlWf = ExDbWorkflow(**self.__commonD)
-                ok1 = rlWf.load("upd_ref_seq", **self.__loadCommonD)
+                ok1 = rlWf.load("upd_ref_seq", refChunkSize=50, **self.__loadCommonD)
                 self.assertTrue(ok1)
                 ok2 = rlWf.load("etl_uniprot", **self.__loadCommonD)
                 self.assertTrue(ok2)
