@@ -7,7 +7,7 @@ rcsb.utils.citation >= 0.15
 rcsb.utils.config >= 0.33
 rcsb.utils.ec >= 0.21
 rcsb.utils.go >= 0.17
-rcsb.utils.seq >= 0.36
+rcsb.utils.seq >= 0.37
 rcsb.utils.struct >= 0.24
 rcsb.utils.taxonomy >= 0.27
 statistics; python_version < "3.0"
