@@ -32,3 +32,5 @@
  2-Feb-2020 V0.40 Add test fixtures to measure memory usage, streamline some extractions, suppress some diagnostic reporting
  4-Feb-2020 V0.41 Update dependencies to support split configuration
  6-Feb-2020 V0.42 Address issue with duplicated annotations from multiple reference sequences
+ 8-Feb-2020 V0.43 Adjust the default chunk size in the workflow interface (set the default to 100)
+ 8-Feb-2020 V0.44 Expose the reference sequence fetch chunk size in the workflow interface
